Fix img alignment;

--- a/src/app/components/category-page/category-page.component.css
+++ b/src/app/components/category-page/category-page.component.css
@@ -35,7 +35,7 @@ li:hover, span:hover {
 }
 
 .img-block {
-  /*float:left;*/
+  min-width: 25px;
 }
 
 .menu-block {
@@ -45,8 +45,4 @@ li:hover, span:hover {
 }
 img {
   width:25px;
-}
-
-.menu-block > div {
-
 }
